--- a/ClientApp/AvaloniaTests/Avaloniapp/MainWindow.axaml
+++ b/ClientApp/AvaloniaTests/Avaloniapp/MainWindow.axaml
@@ -17,7 +17,15 @@
                 Text="Temperature Converter"
                 ></TextBlock>
         </Border>
-        <StackPanel></StackPanel>
-        <Button HorizontalAlignment="Center">Calculate</Button>
+        <Grid ShowGridLines="True" Margin="5"
+            ColumnDefinitions="120, 100"
+            RowDefinitions="Auto, Auto, Auto">
+            <Label Grid.Row="0" Grid.Column="0" Margin="10">Celsius</Label>
+            <TextBox Grid.Row="0" Grid.Column="1" Margin="0 5" Text="0"/>
+            <Label Grid.Row="1" Grid.Column="0">Fahrenheit</Label>
+            <TextBox Grid.Row="1" Grid.Column="1" Margin="0 5" Text="0"/>    
+            <Button Click="ButtonClicked" Grid.Row="2" Grid.Column="1" Margin="0 5">Calculate</Button>
+        </Grid>
+        <!-- <Button HorizontalAlignment="Center">Calculate</Button> -->
     </StackPanel>
 </Window>
